--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,40 @@
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
-        "phpmailer/phpmailer": "^6.10",
-        "vlucas/phpdotenv": "^5.6"
+        "php": ">=7.4",
+        "phpmailer/phpmailer": "^6.8",
+        "ext-json": "*",
+        "ext-fileinfo": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
+        },
+        "files": [
+            "bootstrap.php"
+        ]
+    },
+    "scripts": {
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=PSR12 .",
+        "fix-style": "phpcbf -p --standard=PSR12 .",
+        "post-install-cmd": [
+            "@check-style"
+        ],
+        "post-update-cmd": [
+            "@check-style"
+        ]
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
