--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.4",
-        "phpmailer/phpmailer": "^6.8",
+        "ext-fileinfo": "*",
         "ext-json": "*",
-        "ext-fileinfo": "*"
+        "phpmailer/phpmailer": "^6.8",
+        "tecnickcom/tcpdf": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
